--- a/src/app/pages/paciente/mis-turnos/mis-turnos.component.html
+++ b/src/app/pages/paciente/mis-turnos/mis-turnos.component.html
@@ -18,7 +18,12 @@
             <!-- INICIO DE MOSTRAR INFORMACION SOBRE LOS TURNOS -->
             <div class="card-paciente col-md-4 col-xl-4 rounded-3 border border-3 border-secondary text-left pt-3"
             *ngFor="let turno of turnosMostrar">
-                <h3>Especialista: {{getEspecialista(turno.emailEspecialista)}}</h3>
+                <!-- UTILIZO EL PIPE DEL DOCTOR -->
+                <h3 *ngIf="getEspecialista(turno.emailEspecialista) as especialista">
+                    Especialista: {{ especialista.nombre | doctor }} {{ especialista.apellido }}
+                  </h3>
+                <!-- UTILIZO EL PIPE DEL DOCTOR -->          
+                
                 <h4>Especialidad: {{turno.especialidad}}</h4>
                 <h4>Fecha: {{turno.fecha}}</h4>
                 <h4>Hora: {{turno.horario.hora}}</h4>
