Haciendo pipe de formato DNI

--- a/src/app/pages/paciente/mi-perfil/mi-perfil.component.html
+++ b/src/app/pages/paciente/mi-perfil/mi-perfil.component.html
@@ -25,7 +25,7 @@
                     <hr>
                     <!-- INICIO DE MOSTRAR OTRA INFORMACION -->
                     <div style="margin-left: 5px;">
-                        <h5>DNI: {{paciente.dni}}</h5>
+                        <h5>DNI: {{paciente.dni.toString() | formatoDni}}</h5>
                         <h5>Edad: {{paciente.edad}}</h5>
                         <h5>Email: {{paciente.email}}</h5>
                     </div>
