Esp ve resenia en historial

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
         "content"
         "footer";
     grid-template-rows: auto 1fr auto;
-    overflow-x: hidden; /* Agregado para eliminar el scroll horizontal */
+    overflow-x: hidden; /* Mantener para eliminar el scroll horizontal */
 }
 
 .content {
@@ -16,7 +16,7 @@
     background-repeat: no-repeat;
     grid-area: content;
     overflow-y: auto;
-    position: relative;
-    width: 100vw; /* Asegúrate de que el contenido ocupe el ancho completo de la ventana */
-    box-sizing: border-box; /* Incluye padding y border en el ancho total */
+    position: relative; /* Cambiado de 'absolute' a 'relative' */
+    width: 100%; /* Cambiado de '100vw' a '100%' */
+    box-sizing: border-box; /* Mantener */
 }
