--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div [@routeAnimations]="prepareRouteAnimation(outlet)" class="content">
+<div [@routeAnimations]="o?.activatedRouteData?.['animation']" class="content">
   <div class="col-12">
-    <router-outlet #outlet="outlet"></router-outlet>
+    <router-outlet #o="outlet"></router-outlet>
   </div>
 </div>
