--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@
 }
 /* Modifico el body */
 body{
-  width: 100%;
+  /* width: 100%; */
   /* min-height: 100vh; */
   display: flex;
   justify-content: center;
