Admin descarga excel turnos

--- a/src/app/pages/paciente/mis-turnos/mis-turnos.component.html
+++ b/src/app/pages/paciente/mis-turnos/mis-turnos.component.html
@@ -26,7 +26,7 @@
                 
                 <h4>Especialidad: {{turno.especialidad}}</h4>
                 <h4>Fecha: {{turno.fecha}}</h4>
-                <h4>Hora: {{turno.horario.hora}}</h4>
+                <h4>Hora: {{turno.horario.hora.toString() | horaFormato}}</h4>
                 <h4>Nro. Consultorio: {{turno.horario.nroConsultorio}}</h4>
                 <h4 class="text-capitalize">Estado: {{turno.estado}}</h4><hr>
 
