--- a/src/app/pages/users/pacientes/pacientes.component.css
+++ b/src/app/pages/users/pacientes/pacientes.component.css
@@ -1,46 +1,62 @@
-h3,h4,h5,h6{
-    font-family: 'Quenda';
+h3, h4, h5, h6 {
+  font-family: 'Quenda';
 }
 
-.card{
-    background-color: #c9daf4;
+.card {
+  background-color: #c9daf4;
 }
 
-/* INICIO DE MODIFICACION DEL BOTON */
-
-.btn{
-    position: relative;
-    width: 30%;
-    height: 45px;
-    background: linear-gradient(#3c58b9,#5a84d7,#3c58b9);
-    border: 2px solid #c9daf4;
-    outline: none;
-    border-radius: 40px;
-    cursor: pointer;
-    color: white;
-    font-weight: 600;
-    z-index: 1;
-    overflow: hidden;
-    margin-bottom: 15px;
+.circular-div {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease-in-out;
+  background-color: darkslategrey;
 }
 
-.btn::before{
-content: '';
-position: absolute;
-top: -100%;
-left: 0;
-width: 100%;
-height: 100%;
-background: linear-gradient(#3c58b9,#5a84d7,#3c58b9);
-z-index: -1;
-transition: .5s;
+.circular-div:hover,
+.paciente-div:hover {
+  transform: scale(1.1); 
+  border: 10px solid #0b1d60;
 }
 
-.btn:hover::before{
-    top: 0;
+.btn-propios {
+  position: relative;
+  width: 30%;
+  height: 45px;
+  background: linear-gradient(#3c58b9, #5a84d7, #3c58b9);
+  border: 2px solid #c9daf4;
+  outline: none;
+  border-radius: 40px;
+  cursor: pointer;
+  color: white;
+  font-weight: 600;
+  z-index: 1;
+  overflow: hidden;
+  margin-bottom: 15px;
 }
 
-/* INICIO DE MODIFICACION DE LA TABLA */
+.btn-propios::before {
+  content: '';
+  position: absolute;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#3c58b9, #5a84d7, #3c58b9);
+  z-index: -1;
+  transition: .5s;
+}
+
+.btn-propios:hover::before {
+  top: 0;
+}
+
 .table {
   border-collapse: collapse;
   width: 100%;
@@ -80,5 +96,23 @@ transition: .5s;
   text-overflow: ellipsis;
 }
 
-/* FIN DE MODIFICACION DE LA TABLA */
-  
+.imgRedonda {
+  height: 100%;
+  width: 100%; /* Ajustar a 100% para que se adapte al contenedor */
+  object-fit: cover;
+}
+
+.nombre-paciente {
+  text-align: center;
+}
+
+.card-esp{
+  background-color: darkolivegreen;
+  margin-top: 10px;
+  margin-right: 2px;
+  color: white;
+}
+
+.card-pac {
+  width: 100%; /* Asegura que la tarjeta ocupe todo el espacio disponible */
+}
