Creando componentes estadisticas

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -33,6 +33,17 @@
             </li>
             <!-- FIN DE PACIENTES -->
 
+            <!-- INICIO DE GRAFICOS -->
+            <li>
+                <a (click)="opcion('estadisticas')">
+                    <i class="fa fa-line-chart fa-2x"></i>
+                    <span class="nav-text">
+                        Estadisticas
+                    </span>
+                </a>
+            </li>
+            <!-- FIN DE GRAFICOS -->
+
 
 
             <!-- INICIO DE ADMINS -->
