--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -66,6 +66,9 @@
             <div *ngIf="select == 'turnos'">
                 <app-turnos></app-turnos>
             </div>
+            <div *ngIf="select == 'estadisticas'">
+                <app-estadisticas></app-estadisticas>
+            </div>
             <!-- FIN PARA VER LOS OTROS COMPONENTS -->
 
         </main>
