Creando graficos logs

--- a/src/app/pages/users/estadisticas/estadisticas.component.html
+++ b/src/app/pages/users/estadisticas/estadisticas.component.html
@@ -1,1 +1,19 @@
-<p>estadisticas works!</p>
+<!-- INICIO DEL CONTENEDOR DE LAS ESTADISTICAS -->
+<div>
+  <div #card>
+    <!-- INICIO DE MOSTRAR LOS LOGS -->
+    <div class="row justify-content-center mb-3">
+      <div class="col-lg-5 ml-3">
+        <div class="section-tittle section-tittle2 mt-3">
+          <h5>LOGS:</h5>
+          <hr>
+        </div>
+        <div style="display: block">
+          <canvas #scatterChart></canvas>
+        </div>
+      </div>
+    </div>
+    <!-- FIN DE MOSTRAR LOS LOGS -->
+  </div>
+</div>
+<!-- FIN DEL CONTENEDOR DE LAS ESTADISTICAS -->
