implementando fab-button en usuarios admin

--- a/src/app/pages/especialista/mis-pacientes/mis-pacientes.component.html
+++ b/src/app/pages/especialista/mis-pacientes/mis-pacientes.component.html
@@ -49,6 +49,7 @@
     <!-- FIN DE MOSTRAR LOS HISTORIALES -->
   </div>
 
-  <!-- FAB BUTTON -->
+  <!-- INICIO DEL FAB-BUTTON PARA SELECCIONAR AL PACIENTE -->
   <app-fav-button [pacientes]="pacientes" (pacienteSeleccionado)="onGetHistorial($event)"></app-fav-button>
+  <!-- FIN DEL FAB-BUTTON PARA SELECCIONAR AL PACIENTE -->
 </main>
